Fix assertions in TpchSchemaPartitionedInsertPartitioningEnabledIT