@@ -134,19 +134,17 @@ public class TpchSchemaPartitionedInsertPartitioningEnabledIT {
     public void testExactlyOneParquetFileInRootPartitionInUnpartitionedTable() throws StateStoreException {
         StateStore stateStore = POPULATED_SLEEPER_EXTERNAL_RESOURCE.getStateStore("customer_unpartitioned");
         Map<String, List<String>> partitionToActiveFilesMap = stateStore.getPartitionToActiveFilesMap();
-        assertThat(
-                stateStore.getAllPartitions().stream()
-                        .filter(Partition::isLeafPartition)
-                        .allMatch(partition -> partitionToActiveFilesMap.getOrDefault(partition.getId(), ImmutableList.of()).size() == 1));
+        assertThat(stateStore.getLeafPartitions())
+                .extracting(partition -> partitionToActiveFilesMap.getOrDefault(partition.getId(), List.of()))
+                .allSatisfy(partitionFiles -> assertThat(partitionFiles).hasSize(1));
     }
 
     @Test
     public void testMaxOneParquetFilePerPartitionInPartitionedTable() throws StateStoreException {
         StateStore stateStore = POPULATED_SLEEPER_EXTERNAL_RESOURCE.getStateStore("customer_partitioned");
         Map<String, List<String>> partitionToActiveFilesMap = stateStore.getPartitionToActiveFilesMap();
-        assertThat(
-                stateStore.getAllPartitions().stream()
-                        .filter(Partition::isLeafPartition)
-                        .allMatch(partition -> partitionToActiveFilesMap.getOrDefault(partition.getId(), ImmutableList.of()).size() <= 1));
+        assertThat(stateStore.getLeafPartitions())
+                .extracting(partition -> partitionToActiveFilesMap.getOrDefault(partition.getId(), List.of()))
+                .allSatisfy(partitionFiles -> assertThat(partitionFiles).hasSizeLessThanOrEqualTo(1));
     }
 }
